--- a/doc/additional_programs.tex
+++ b/doc/additional_programs.tex
@@ -306,12 +306,12 @@ $\rho^2=R_a^2/D_a^2+R_b^2/D_b^2+R_c^2/D_c^2$
 \item[option {\prg option -bvk filename}]
               for phonon take Born van Karman model with longitudinal and
               transversal spring constants from file - file format:
-             \begin{verbatim}  #  atom_i_sipf atom_j_sipf bondlength(A) long(N/m) trans(N/m) 
+             \begin{verbatim}#  atom_i_sipf atom_j_sipf bondlength(A) long(N/m) trans(N/m) 
 Ce1.sipf  Ce1.sipf  +4.0 200.9 100.0
 Ce1.sipf  Ce1.sipf  +4.7 70.9 0.0
-              mind: into MODPAR2-6 in *.sipf the Einstein-oscillator parameters
-              are written, too
              \end{verbatim}
+              mind: into MODPAR2-6 in {\prg *.sipf} the Einstein-oscillator parameters
+              are written, too.
               Longitudinal/Transversal springs are described by $c_L$/$c_T$, respectively and
               the energy is given by
 \begin{eqnarray}
@@ -321,7 +321,9 @@ Ce1.sipf  Ce1.sipf  +4.7 70.9 0.0
 Fig.~\ref{figbvk} shows the Born-van-Karman
 model definition of longitudinal springs $c_L$ and transversal
 springs $c_T$.
-
+               Omit filename to create a sample file with
+              longitudinal springs calculated according to $C_L(ij)=25 \exp(-0.1*r^2_{ij}/\AA^2)$~N/m.
+	      Output: file {\prg makenn.Cel} is created containing just the elastic constants.
 
 \item[option {\prg  option -cfph [-r] [screeningfile.r]}]
               calculate crystal field phonon interaction: {\prg mcphas.j} lists 
