edvardson radial matrix elements added as option to cif2mcphas

--- a/doc/additional_programs.tex
+++ b/doc/additional_programs.tex
@@ -325,7 +325,7 @@ springs $c_T$.
               longitudinal springs calculated according to $C_L(ij)=25 \exp(-0.1*r^2_{ij}/\AA^2)$~N/m.
 	      Output: file {\prg makenn.Cel} is created containing just the elastic constants.
 
-\item[option {\prg  option -cfph [-r] [screeningfile.r]}]
+\item[option {\prg  option -cfph [screeningfile.r] [-r]}]
               calculate crystal field phonon interaction: {\prg mcphas.j} lists 
               magnetic and non magnetic atoms with charges defined in the 
               sipf files by {\prg CHARGE= variable}. For magnetic atoms the sipf 
