accelerated ic1ion by own written expectation value function in martin.c

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -342,6 +342,7 @@ GdNi$_2$B$_2$C & double-q magnetic structure, spin only (L=0) & {\prg brillouin}
 GdRu$_2$Si$_2$ & biquadratic interactions - magnetisation, mag. structure & {\prg cfield} & \\
 helix\_spinwave & spinwave calculation for a helical magnetic structure & {\prg so1ion} & \\
 Ho$_2$Ti$_2$O$_7$ & diffuse magnetic scattering & {\prg so1ion} & \cite{bramwell01-1495}\\
+                  & cf-phonon interaction, INS, magnetostriciton & {\prg phonon} & \\
 LaCoO$_3$ & spin polarons quasielastic scattering & {\prg cluster}\index{cluster} & \cite{podlesnyak11-134430,podlesnyak08-247603} \\
 La$_2$CoO$_4$ & dispersive magnetic excitations / spinwaves &{\prg  ic1ion} & \cite{lewtas10-184420}\\
 LuMnO$_3$ &  magnetic structure and dispersion of excitations & {\prg so1ion} & \cite{lewtas10-184420} \\
@@ -358,7 +359,6 @@ PuPd$_3$ & susceptibility, heat capacity & {\prg ic1ion}\index{ic1ion} & \cite{l
 Ru3p\_create\_sipf & how to create paramters for a sipf file from  & {\prg simannfit,cowan} & \cite{cowan81-1} \\
                    & a Hartree Fock Calculation & {\prg RCN36K,RCN2K} & \\
 TbCu$_2$ & magnetic phases with field parallel $a$ & {\prg cfield} \\
-Tb2Ti2O7\_cfphonon\_simple & cf-phonon interaction, INS & {\prg so1ion,phonon} & \\
 TmNiC$_2$ & determine point charge set to obey high-T exp. $B_2^0$,$B_2^2$ & {\prg so1ion,phonon}  & \\
           & with bonding e-charges.Strain,INS with cf-phonon int. &  & chap.\ref{determinePcmodel}\\
 test\_cluster & test of a binary cluster of two spins & {\prg cluster} & \\
