cluster module accellerated by matrix temperature for singleion -Tsteps option simannfit searchspace fine tuned option -log -p

--- a/doc/li120914.bib
+++ b/doc/li120914.bib
@@ -1,3 +1,13 @@
+@article{romhany14-xxx,
+title={Entangled tetrahedron ground state and excitations of the magneto-electric skyrmion
+material Cu2OSeO3},
+author={Romhany, J. and Brink, J. and Rousochatzakis, I.},
+year={2014},
+url={http://arxiv.org/abs/1403.4081v2}
+}
+
+
+
 @article{edvardsson98-230,
 title={CRole of the electrostatic model in calculating rare-earth crystal field parameters},
 author={Edvardsson, S. and Klintenberg, M.},
