--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -332,6 +332,7 @@ so1ion}&\cite{rotter09-140405} \\
                & dipolar approx for mag. formfactor & &\\     
 CoO            & magnetic formfactor - flipping ratios,   &{\prg  ic1ion} & \\
                & highly inelastic neutron scattering      &               & \\
+Cu$_2$OSeO$_3$ & interacting clusters of four spins & {\prg cluster} & \cite{romhany14-xxx}\\
 DyCu$_2$       & quadrupolar order and phase diagram & {\prg cfield}\index{cfield}&\cite{yoshida98-1421} \\
 DyNi$_2$B$_2$C & magnetic phase diagram, special single  & {\prg %%@
 quartett.so}\index{quartett.so}& \\
@@ -361,7 +362,6 @@ Ru3p\_create\_sipf & how to create paramters for a sipf file from  & {\prg siman
 TbCu$_2$ & magnetic phases with field parallel $a$ & {\prg cfield} \\
 TmNiC$_2$ & determine point charge set to obey high-T exp. $B_2^0$,$B_2^2$ & {\prg so1ion,phonon}  & \\
           & with bonding e-charges.Strain,INS with cf-phonon int. &  & chap.\ref{determinePcmodel}\\
-test\_cluster & test of a binary cluster of two spins & {\prg cluster} & \\
 testic1ion & Pr$^{3+}$ chargedensity in IC and LS coupling & {\prg ic1ion,cfield} &\\
 tungsten& phonons in tungsten & {\prg phonon} & \\
 UPd$_3$ & dispersive CEF excitations, quadrupolar interactions  & {\prg so1ion}\index{so1ion} & \cite{le12-036002} \\
