--- a/doc/mcdiff.tex
+++ b/doc/mcdiff.tex
@@ -474,10 +474,11 @@ z_2 & = & \mu_x \sin \alpha_1 \sin (\Psi +\delta_1)+\mu_y \sin \alpha_2 \sin (\P
 z_3 & = & \mu_x \cos \alpha_1 + \mu_y \cos \alpha_2 + \mu_z \cos \alpha_3 
 \end{eqnarray}
  
-with angles $\alpha_i=\angle(\mbf \hat x_i \cdot \mbf u_3)_{\Psi=0}$ and $\delta_i=\angle(\mbf x_i^{\perp}\cdot %%@
-\mbf u_1)_{\Psi=0}$, where $\mbf \hat x_{1,2,3}=\mbf \hat x,\mbf \hat y,\mbf \hat z$ 
+with angles $\alpha_i=\angle( \hat \mbf x_i \cdot \mbf u_3)_{\Psi=0}$ 
+and $\delta_i=\angle(\mbf x_i^{\perp}\cdot \mbf u_1)_{\Psi=0}$, 
+where $\hat \mbf x_{1,2,3}=\hat \mbf x,\hat \mbf y,\hat \mbf z$ 
 and $\mbf x_i^{\perp}$ is the projection of
-$\mbf \hat x_i$ onto the plane perpendicular to $\mbf Q$. In the chosen experimental geometry
+$\hat \mbf x_i$ onto the plane perpendicular to $\mbf Q$. In the chosen experimental geometry
 $\Psi=0$ when $\mbf x$ points to the x-ray source (and for the special case
 of $\mbf Q|| \mbf x$ when $\mbf y$ points to the x-ray source).
 
