singleion introduced options -d -s -is for static and dynamic susceptibility

--- a/doc/additional_programs.tex
+++ b/doc/additional_programs.tex
@@ -664,33 +664,69 @@ options: -nt ......... by default only 5 transition energies are output,
          -pinit 0.1 .. consider only transitions with population of initial state > 0.1
          -ninit 3  ... consider only transitions from the 3 lowest eigenstates
          -maxE 30  ... consider only transitions with energy lower than 30 meV
+         -E        ... output to stdout energy of cf levels instead of transition energy
          -r ion.sipf . do not read mcphas-j but only the single ion
                        parameter file ion.sipf
          -M  ......... calculate expectation values and transition matrix
-                       elements for magnetic moment M instead of I
-         -MQ 0 0 1 ... instead of <I> calculate expectation values, transition matrix elements
-                       for M(Q=(0 0 1)/A), the Fourier Transform  of magnetic moment density M(r)
-         -S  ......... calculate expectation values and transition matrix
-                       elements for spin S
+                       elements for magnetic moment M (muB)instead of I
+         -MQ 0 0 1 ...  instead of <I> calculate expectation values, transition matrix elements
+                       for M(Q=(0 0 1)/A), the Fourier Transform  of magnetic moment density M(r) 
          -L  ......... calculate expectation values and transition matrix
                        elements for orbital momentum L
-         -v       .... verbose, output more information on ongoing calculation
+         -S  ......... calculate expectation values and transition matrix
+                       elements for spin S
+         -d 23.4 0.001 calculate dynamic magnetic single ion susceptibility X(omega) and neutron
+                       scattering function S(Q=0,omega) at hbar omega= E= 23.4 meV 
+                       with imaginary part epsilon=0.001 meV (epsilon>0)
+\end{verbatim} 
+The program evaluates equation (\ref{singleionsusceptibility}) setting $\hat \mathcal I_{\alpha}$
+equal to the magnetic moment operator $\hat M_{\alpha}$ with $\alpha=1,2,3$ for the
+three cartesian directions x,y and z. Having evaluated the magnetic single ion susceptibility
+it is possible to use the fluctuation dissipation theorem to calculate the magnetic inelastic
+single ion neutron scattering cross section   
+in dipole approximation for a polycrystal neglecting
+form factor, Debye Waller factor by the following relation
+
+\begin{equation}
+S_{\rm mag,poly}^{inel}(Q=0,\omega)=  \frac{2}{3}\frac{(\gamma r_0)^2}{4\pi} \frac{1}{1-exp(-\hbar\omega/k_bT)}     \sum_{\alpha=1,2,3}\chi''_{\alpha\alpha}(\omega)
+\end{equation}
+
+Compare (\ref{fluctdissbeyond}), (\ref{Sinelperp}) and (\ref{sinelmag}). Note, the prefactor $2/3$ comes
+from the average of the polarisation factor.
+
+\begin{verbatim}
+
+         -s 0.3 0.1 .. calculate static magnetic single ion susceptibility X in emu/mol with
+                       constant offset X0=0.3 emu/mol and molecular field constant lambda=0.1 mol/emu
+                       1/(X-X0)=(1/Xcf)-lambda. Xcf obtained the same way as option -d 0 0 and
+                       converting the results to emu/mol by multiplying with factor MU_B MU_B NA/10000=
+                       = 0.0578838263*0.55848973464 = 0.0323275227902. lambda is only applied if  
+                       Xcf is diagonal.
+         -is  0.3 0.1  same as -s but output of the inverse susceptibility Y=X^-1 in mol/emu
+                       (works only if off diagonal elements of X are zero)
+         -t  ......... reads .trs files from previous run (possibly modified by user, i.e. removing
+                       some lines to speed up an approximate calculation of spectra.
+         -Esteps 10 27 for option -d in addition to initial Energy calculate 10 further
+                       Energies until 27 meV has been reached
          -Tsteps 10 27 in addition to initial temperature calculate 10 further temperatures
                        until 27K has been reached
          -Hsteps 20 0 0 10 in addition to initial field calculate 20 further external fields
                        until (0 0 10) Tesla has been reached
-         -opmat 2 .... output operator matrix number n=2 to results/op.mat
-                Operators in output results/op.mat for different values of n:
+         -opmat 2 .... output operator matrix number n=2 to results/*.opmat
+                Operators in results/output op.mat for different values of n:
                 n=0                    Hamiltonian
                 n=1,...,nofcomponents  operator Matrix In in standard basis
                 n=-1,..,-nofomponents  operator Matrix In for Hamiltonian eigenstates basis
                 n>nofomponents: all operator Matrices (n=0 to n=nofcomponents) in standard basis
                 n<-nofomponents: all operator Matrices (n=0 to n=-nofcomponents) in Hamiltonian eigenstates basis
-
-note: for calculating T or H dependencies you can put single ion in a loop
-       and pipe the result into a file
-
-  .... linux:   for B in $(seq 0 0.1 14); do singleion 2 $B 0 0 0 0 0; done > results/fielddep.dat
+         -v       .... verbose, output more information on ongoing calculation
+Note: for calculating T,H dependencies you can instead of using options -Tsteps or -Hsteps put singleion in a LOOP
+      and pipe the result into a file
+ ... LOOP linux:   for B in $(seq 0 0.1 14); do singleion 2 $B 0 0 0 0 0; done > results/fielddep.dat
+ ... LOOP linux using perl:
+perl -e 'for($B=1;$B<14;$B+=0.1){system("singleion 2 ".$B." 0 0  0 0 0");}' > results/sus1Tesla.clc 
+ ... LOOP for windows using perl:
+perl -e "for($B=1;$B<14;$B+=0.1){system('singleion 2 '.$B.' 0 0  0 0 0');}" > results\sus1Tesla.clc
 
   .... windows command line: for /L %B in (0,1,14)  do singleion 2 %B 0 0 0 0 0 >> results\fielddep.dat
 
@@ -700,10 +736,6 @@ note: for calculating T or H dependencies you can put single ion in a loop
           set B=!w!.!f!
           @echo on && singleion 2 0 0 !B! 0 0 0 && @echo off )
           endlocal && @echo on 
-...  LOOP linux using perl:
-perl -e 'for($T=1;$T<90;$T+=2){system("singleion ".$T." 1 0 0   0 0 0");}' > results/sus1Tesla.clc
- ... LOOP for windows using perl:
-perl -e "for($T=1;$T<90;$T+=2){system('singleion '.$T.' 1 0 0   0 0 0');}" > results\sus1Tesla.clc'
 
 \end{verbatim}      
 
